# ils-reports

./: .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  CLAUDE.md  LICENSE  Makefile  README.md  compose.yaml  config.json.sample  datasette-templates-plan.md  mkdocs.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
collection_analysis/: config.py  extract.py  load.py  run.py  telemetry.py  transform.py
datasette/: Dockerfile  datasette.yml  fly.toml  metadata.yml  requirements-datasette.txt
datasette/static/: chpl-base.css  chpl-variables.css
datasette/templates/: base.html  index.html
docs/: configuration.md  data_dictionary.md  development.md  index.md  pipeline.md  testing.md
docs/tables/: base_tables.md  link_tables.md  lookup_tables.md  views.md
llore/: 001-pipeline-performance-and-resource-strain-improvements.md  002-extraction-performance-circ-agg-and-item-message-bottlenecks.md  003-repo-assessment.md  004-project-walkthrough.md
reference/: collection-analysis.cincy.pl_gen_db.ipynb  requirements.txt  requirements.txt.prev
reference/chimpy-say-templates/: index.html
reference/my-app/: inspect-data.json  metadata.json  settings.json  settings.json.prev
scripts/: build-sample-db.sh  clean.sh  create-test-db.py  datasette.sh  deploy.sh  dev-datasette.sh  docs.sh  format.sh  lint.sh  new-plan.py  report-runs.py  run.sh  setup.sh  test.sh
sql/indexes/: 01_indexes.sql
sql/queries/: .sqlfluff  bib.sql  bib_level_property.sql  bib_record.sql  bib_record_item_record_link.sql  branch.sql  branch_name.sql  circ_agg.sql  circ_leased_items.sql  country_property_myuser.sql  hold.sql  item.sql  item_message.sql  item_status_property.sql  itype_property.sql  language_property.sql  location.sql  location_name.sql  material_property.sql  record_metadata.sql  volume_record.sql  volume_record_item_record_link.sql
sql/views/: 01_isbn_view.sql  02_duplicate_items_in_location_view.sql  03_location_view.sql  04_item_view.sql  05_branch_30_day_circ_view.sql  06_branch_location_view.sql  07_collection_value_branch_view.sql  08_hold_view.sql  09_hold_title_view.sql  10_leased_item_view.sql  11_ld_compare_view.sql  12_location_percent_checkout_view.sql  (+14 more)
tests/: conftest.py
(+149 files in other folders)
