[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ils-reports"
version = "0.1.0"
description = "Data pipelines from Sierra ILS (PostgreSQL) to SQLite for reporting and analysis"
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "sqlite-fts4==1.0.1",
]

[project.scripts]
collection-analysis = "collection_analysis.run:main"

[project.optional-dependencies]
datasette = ["datasette>=1.0a1", "datasette-leaflet>=0.2"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["collection_analysis"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-postgresql>=5.0",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "sqlfluff>=2.3",
    "pre-commit>=3.6",
    "djlint>=1.34",
    "tinycss2>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["integration: requires a live PostgreSQL instance"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["collection_analysis", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["collection_analysis"]

[tool.ruff.format]
quote-style = "double"

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 120
ignore = "H006,E102,J018,J004"

[tool.coverage.run]
source = ["collection_analysis"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
